[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/rocks.gd" type="Script" id=1]
[ext_resource path="res://assets/rocks/1.png" type="Texture" id=2]
[ext_resource path="res://assets/explosion.png" type="Texture" id=3]
[ext_resource path="res://assets/audio/hit_enemy.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/audio/explosion.ogg" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 46.2567

[node name="rock" type="Node2D"]
script = ExtResource( 1 )

[node name="image" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="area" type="Area2D" parent="."]

[node name="collision" type="CollisionShape2D" parent="area"]
shape = SubResource( 1 )

[node name="explosion" type="Sprite" parent="."]
visible = false
position = Vector2( 5.48462, 4.83345 )
texture = ExtResource( 3 )

[node name="sfxHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="sfxExplosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
[connection signal="area_entered" from="area" to="." method="_on_area_area_entered"]
